--- a/InsultGenerator/README
+++ b/InsultGenerator/README
@@ -1,4 +1,4 @@
-# Insult Generator
+Insult Generator
 For CISC320 Fundamentals Of Software Development
 
 Takes a list of shakespearean adjectives from 'InsultsSource.txt' and prints 100 unique insults to terminal and 1000 to a txt file 'SavedInsults.txt'
